--- a/ms_validate/src/views/emails/evaluation_status.edge
+++ b/ms_validate/src/views/emails/evaluation_status.edge
@@ -180,7 +180,7 @@ a[x-apple-data-detectors='true'] {
   <tr>
     <td class="v-text-align" style="padding-right: 0px;padding-left: 0px;" align="center">
       
-      <img align="center" border="0" src="images/image-1.png" alt="Business Solution" title="Business Solution" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 90%;max-width: 252px;" width="252" class="v-src-width v-src-max-width"/>
+      <img align="center" border="0" src="cid:theImageIWant" alt="Business Solution" title="Business Solution" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 90%;max-width: 252px;" width="252" class="v-src-width v-src-max-width"/>
       
     </td>
   </tr>
@@ -348,7 +348,7 @@ a[x-apple-data-detectors='true'] {
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:0px 10px 10px;font-family:arial,helvetica,sans-serif;" align="left">
         
   <h1 class="v-text-align v-font-size" style="margin: 0px; line-height: 140%; text-align: center; word-wrap: break-word; font-weight: normal; font-family: 'Raleway',sans-serif; font-size: 22px;">
-    <strong>AGUARDANDO</strong>
+    <strong>{{status}}</strong>
   </h1>
 
       </td>
