feat: better accounts usage

--- a/luby_cash/resources/views/emails/forgot_password.edge
+++ b/luby_cash/resources/views/emails/forgot_password.edge
@@ -261,7 +261,7 @@ a[x-apple-data-detectors='true'] {
 <p style="font-size: 14px; line-height: 140%;">&nbsp;</p>
 <p style="font-size: 14px; line-height: 140%;"><span style="font-size: 18px; line-height: 25.2px; color: #666666;">We have sent you this email in response to your request to reset your password on company name.</span></p>
 <p style="font-size: 14px; line-height: 140%;">&nbsp;</p>
-<p style="font-size: 14px; line-height: 140%;"><span style="font-size: 18px; line-height: 25.2px; color: #666666;">To reset your password, please follow the link below: </span></p>
+<p style="font-size: 14px; line-height: 140%;"><span style="font-size: 18px; line-height: 25.2px; color: #666666;">To reset your password, please follow the link below or use the token: {{token}} </span></p>
   </div>
 
       </td>
